# inspection_idle

./: .gitignore  Cargo.toml
assets/affinity/: exr1.afdesign  manometer.afpub  tiles.afpub
assets/items/: camera_hd.it  camera_lens_telephoto.it  camera_lens_wide.it  camera_zoom.it  fancy_manometer_pointer.it  gras_material.it  gras_materials.it  gray_pipe.it  gray_pipe_bent.it  gray_pipe_split.it  interaction_point.it  medium_manometer_markings.it  sensor_mast_two.it  simple_battery.it  simple_body.it  simple_manometer_background.it  simple_manometer_frame.it  simple_manometer_icon.it  simple_track.it  simple_tracks.it  waypoint_marker.it
assets/maps/: basic.ldtk
assets/maps/basic/: 0000-Level_0.ldtkl
assets/sprites/: camera_hd.ad  camera_zoom.ad  simple_body.ad  simple_robot_config.rc  simple_tracks.ad
src/: consts.rs  main.rs  utils.rs
src/dev/: debug.rs  inspector.rs  mod.rs
src/game/: animation.rs  builders.rs  item_builder.rs  mod.rs  physics.rs  resources.rs  types.rs
src/game/builders/: item.rs  robot.rs
src/game/bundles/: animation.rs  empty.rs  interaction_marker.rs  item.rs  mod.rs  physics.rs
src/game/components/: animation.rs  collision_filter.rs  mod.rs  robot.rs  robot_components.rs  terrain.rs  ui.rs
src/game/loader/: collection.rs  information.rs  item.rs  mod.rs  sprite_asset.rs
src/game/physics/: controller.rs
src/game/resources/: item_collection.rs  item_information.rs  mod.rs  pipe_line.rs  robot_commands.rs  sprite_asset.rs  ui.rs  (+1 more)
src/ui/: mod.rs  painting.rs  sidebar.rs  types.rs
src/utils/: mod.rs  rigid_body.rs
(+28 files in other folders)
